added reading file method with validation logic

--- a/LocalIntegration.Worker/LocalIntegration.Worker.csproj
+++ b/LocalIntegration.Worker/LocalIntegration.Worker.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LocalIntegration.Service\LocalIntegration.Service.csproj" />
+  </ItemGroup>
 </Project>
