--- a/LocalIntegration.Service/LocalIntegration.Service.csproj
+++ b/LocalIntegration.Service/LocalIntegration.Service.csproj
@@ -8,8 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="JsonSchema.Net.Generation" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="JsonSchema\" />
   </ItemGroup>
 
 </Project>
