--- a/LocalIntegration.Worker/LocalIntegration.Worker.csproj
+++ b/LocalIntegration.Worker/LocalIntegration.Worker.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="JsonSchema\JSON-SCHEMA-NR08.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="JsonSchema\JSON-SCHEMA-NR08.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="JsonSchema.Net.Generation" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
